--- a/contacts.html
+++ b/contacts.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacts</title>
-    <link rel="stylesheet" href="../assets/css/styles.css">
-    <link rel="stylesheet" href="../assets/libs/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../assets/css/icons.css">
+    <link rel="stylesheet" href="Zynix_esbuild/dist/assets/css/styles.css">
+    <link rel="stylesheet" href="Zynix_esbuild/dist/assets/libs/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="Zynix_esbuild/dist/assets/css/icons.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.3.0/css/responsive.bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.2.3/css/buttons.bootstrap5.min.css">
@@ -80,7 +80,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
     <script>
         // Charger les données des contacts
-        fetch('../../../contacts.csv')
+        fetch('contacts.csv')
             .then(response => response.text())
             .then(csvText => {
                 const parsedData = Papa.parse(csvText, {
